<resources>
    <string name="app_name">Lipid-lator</string>
    <string name="tvLipidClass">Lipid Class</string>
    <string name="tvIon">Ion</string>
    <string name="tvAcylChain">Acyl Chain</string>
    <string name="btnSubmit">Submit</string>
    <string name="tvResults">Results</string>
    <string name="tvAbbreviation">Abbreviation</string>
    <string name="tvFormula">Formula</string>
    <string name="tvMolar_mass">Molar Mass</string>
    <string name="btnGo_back">Go Back</string>
    <string name="fatty_acids">Fatty Acids</string>
    <string name="acid_label">Acid:</string>
    <string name="calculate_btn">Calculate</string>
    <string name="ester_label">Ester:</string>
    <string name="ion_label">Ion:</string>
    <string name="ionTV">Ion:</string>
    <string name="waxEstersTitle">Wax Esters</string>
    <string name="acid">Acid:</string>
    <string name="alcohol">Alcohol:</string>
    <string name="submit">Submit</string>
    <string name="button">Button</string>
    <string name="acyl_carnitines">Acyl carnitines</string>
    <string name="acyl_chain">Acyl chain</string>
    <string name="glycerophospholipids">Glycerophospholipids</string>
    <string name="head_group">Head Group:</string>
    <string name="ion">Ion:</string>
    <string name="sn1_1">sn1(1\'):</string>
    <string name="sn2_1">sn2(1\'):</string>
    <string name="sphingolipids">Sphingolipids</string>
    <string name="sphingoid_base">Sphingoid Base:</string>
    <string name="btnsubmit">btnSubmit</string>
    <string name="head_group_type">Head Groups:</string>
    <string name="ion_type">Ions:</string>
    <string name="n_acyl">N-acyl:</string>
    <string name="cholesteryl_esters">Cholesteryl\nEsters</string>
    <string name="abbreviation">Abbreviation:</string>
    <string name="acyl_chain_chE">Acyl Chain:</string>
    <string name="calculate_chE">Calculate</string>
    <string name="ion_chE">Ion:</string>
    <string name="m_z_ratio_chE">m/z ratio:</string>
    <string name="cholesteryl_esters_act">Cholesteryl Esters</string>
    <string name="acyl_chain_chE_act">Acyl Chain:</string>
    <string name="calculate_chE_act">Calculate</string>
    <string name="ion_chE_act">Ion:</string>
    <string name="formula_shingolipids_result">Formula:</string>
    <string name="cardiolipins">Cardiolipins</string>
    <string name="ion_cardiolipins">Ion:</string>
    <string name="sn1_1_cardiolipins">sn1(1\'):</string>
    <string name="sn1_3_cardiolipins">sn1(3\'):</string>
    <string name="sn2_1_cardiolipins">sn2(1\'):</string>
    <string name="sn2_3_cardiolipins">sn2(3\'):</string>
    <string name="cardiolipins_header">Cardiolipins</string>
    <string name="ion_cardiolipins_selection">Ion:</string>
    <string name="cardiolipins_sn1_1_selection">sn1(1\'):</string>
    <string name="cardiolipins_selection_sn1_3">sn1(3\'):</string>
    <string name="cardiolipins_selection_sn2_1">sn2(1\'):</string>
    <string name="cardiolipins_selection_sn2_3">sn2(3\'):</string>
    <string name="fomula_cardiolipins">Fomula:</string>
    <string name="m_z_ratios_cardiolipins">m/z ratios:</string>
    <string name="formula_Glycerophospholipids_result">Formula</string>
    <string name="Home">Home</string>
    <string name="m_z_ratio_sphingolipids">m_z_ratio:</string>
    <string-array name="lipid_class_array">
        <item>(Select a lipid)</item>
        <item>Fatty Acids</item>
        <item>Wax esters</item>
        <item>Acyl Carnitines</item>
        <item>CoA esters</item>
        <item>Glycerolipids</item>
        <item>Glycerophospholipids</item>
        <item>Cardiolipins</item>
        <item>Sphingolipids</item>
        <item>Cholesteryl esters</item>
    </string-array>
    <string-array name="ion_array">
        <item>[M+H]+</item>
        <item>[M+H-H2O]+</item>
        <item>[M+2H]2+</item>
        <item>[M+3H]3+</item>
        <item>[M+4H]4+</item>
        <item>[M+K]+</item>
        <item>[M+2K]2+</item>
        <item>[M+2K-H]+</item>
        <item>[M+Na]+</item>
        <item>[M+2Na]2+</item>
        <item>[M+2Na-H]+</item>
        <item>[M+Li]+</item>
        <item>[M+2Li]2+</item>
        <item>[M+Ag]+</item>
        <item>[M+NH4]+</item>
        <item>[M-H]-</item>
        <item>[M-CH3]-</item>
        <item>[M-2H]2-</item>
        <item>[M-3H]3-</item>
        <item>[M-4H]4-</item>
        <item>[M+Cl]-</item>
        <item>[M+OAc]-</item>
        <item>[M+Formate]-</item>
        <item>M(neutral)</item>
    </string-array>
    <string-array name="ion_array_values">
        <item>"MplusH"</item>
        <item>"MplusH-H2O"</item>
        <item>"Mplus2H"</item>
        <item>"Mplus3H"</item>
        <item>"Mplus4H"</item>
        <item>"MplusNH4"</item>
        <item>"MplusAg"</item>
        <item>"MplusNa"</item>
        <item>"Mplus2Na"</item>
        <item>"Mplus2Na-H"</item>
        <item>"MplusK"</item>
        <item>"Mplus2K"</item>
        <item>"Mplus2K-H"</item>
        <item>"MplusLi"</item>
        <item>"Mplus2Li"</item>
        <item>"M-H"</item>
        <item>"M-CH3"</item>
        <item>"M-2H"</item>
        <item>"M-3H"</item>
        <item>"M-4H"</item>
        <item>"M.Cl"</item>
        <item>"M.OAc"</item>
        <item>"M.Formate"</item>
    </string-array>
    <string-array name="ratios_array">
        <item>2:0</item>
        <item>4:0</item>
        <item>6:0</item>
        <item>8:0</item>
        <item>10:0</item>
        <item>12:0</item>
        <item>13:0</item>
        <item>14:0</item>
        <item>14:1(9Z)</item>
        <item>15:0</item>
        <item>15:1(9Z)</item>
        <item>16:0</item>
        <item>16:1(9Z)</item>
        <item>17:0</item>
        <item>17:1(9Z)</item>
        <item>17:2(9Z,12Z)</item>
        <item>18:0</item>
        <item>18:1(11E)</item>
        <item>18:1(9Z)</item>
        <item>18:2(9Z,12Z)</item>
        <item>18:3(6Z,9Z,12Z)</item>
        <item>18:3(9Z,12Z,15Z)</item>
        <item>18:4(6Z,9Z,12Z,15Z)</item>
        <item>19:0</item>
        <item>20:0</item>
        <item>20:1(11Z)</item>
        <item>20:2(11Z,14Z)</item>
        <item>20:3(8Z,11Z,14Z)</item>
        <item>20:4(5Z,8Z,11Z,14Z)</item>
        <item>20:5(5Z,8Z,11Z,14Z,17Z)</item>
        <item>21:0</item>
        <item>22:0</item>
        <item>22:1(11Z)</item>
        <item>22:2(13Z,16Z)</item>
        <item>22:3(10Z,13Z,16Z)</item>
        <item>22:4(7Z,10Z,13Z,16Z)</item>
        <item>22:5(7Z,10Z,13Z,16Z,19Z)</item>
        <item>22:6(4Z,7Z,10Z,13Z,16Z,19Z)</item>
        <item>23:0</item>
        <item>24:0</item>
        <item>24:1(15Z)</item>
        <item>25:0</item>
        <item>26:0</item>
    </string-array>
    <string-array name="headGroup_array_values">
        <item>"unsubstituted(Ceramide)"</item>
        <item>"Sphingomyelin"</item>
        <item>"1-phosphate"</item>
        <item>"1-phosphoethanolamine"</item>
        <item>"1-phosphoinositol"</item>
        <item>"Glucosyl"</item>
        <item>"Galactosy"</item>
        <item>"Lactosyl"</item>
        <item>"GM3(NeuAca1-3Galb1-4Glcb)"</item>
        <item>"GM4(NeuAca1-3Galb)"</item>
        <item>"GB3(Gala1-4Galb1-4Glcb)"</item>
        <item>"iGB3(Gala1-3Galb1-4Glcb)"</item>
        <item>"asialo-GM2(GalNAcb1-4Galb1-4Glcb)"</item>
        <item>"Lc3(GlcNAcb1-4Galb1-4Glcb)"</item>
        <item>"Manb1-4Glc"</item>
        <item>"Mollu(Manb1-3Manb1-4Glcb)"</item>
        <item>"Arthro(GlcNAcb1-4Manb1-Glc)"</item>
    </string-array>
    <string-array name="ester_array_values">
        <item>"Free acid"</item>
        <item>"Methyl ester"</item>
        <item>"Pentafluorobenzyl ester"</item>
    </string-array>
    <string-array name="sphingoid_array_values">
        <item>"d18:1(4E)"</item>
        <item>"d18:0"</item>>
        <item>"d18:2"</item>
        <item>"t18:0"</item>
        <item>"t18:1"</item>
        <item>"d20:1"</item>
        <item>"d20:0"</item>
        <item>"d20:2"</item>
        <item>"t20:0"</item>
        <item>"t20:1"</item>
        <item>"d16:1"</item>
        <item>"d16:0"</item>
        <item>"d16:2"</item>
        <item>"t16:0"</item>
        <item>"t16:1"</item>
        <item>"d14:1"</item>
        <item>"d14:0"</item>
        <item>"d14:2"</item>
        <item>"t14:0"</item>
        <item>"t14:1"</item>
        <item>"d15:1"</item>
        <item>"d15:0"</item>
        <item>"d15:2"</item>
        <item>"t15:0"</item>
        <item>"t15:1"</item>
        <item>"d17:1"</item>
        <item>"d17:0"</item>
        <item>"d17:2"</item>
        <item>"t17:0"</item>
        <item>"t17:1"</item>
        <item>"d19:1"</item>
        <item>"d19:0"</item>
        <item>"d19:2"</item>
        <item>"t19:0"</item>
        <item>"t19:1"</item>
        <item>"d21:1"</item>
        <item>"d21:0"</item>
        <item>"d21:2"</item>
        <item>"t21:0"</item>
        <item>"t21:1"</item>
        <item>"d22:1"</item>
        <item>"d22:0"</item>
        <item>"d22:2"</item>
        <item>"t22:0"</item>
        <item>"t22:1"</item>
    </string-array>
    <string-array name="n_acyl_array_values">
        <item>"12:0"</item>
        <item>"13:0"</item>>
        <item>"14:0"</item>
        <item>"h14:0"</item>
        <item>"15:0"</item>
        <item>"h15:0"</item>
        <item>"16:0"</item>
        <item>"16:1"</item>
        <item>"h16:0"</item>
        <item>"h16:1"</item>
        <item>"17:0"</item>
        <item>"h17:0"</item>
        <item>"18:0"</item>
        <item>"18:1"</item>
        <item>"h18:0"</item>
        <item>"h18:1"</item>
        <item>"19:0"</item>
        <item>"h19:0"</item>
        <item>"20:0"</item>
        <item>"20:1"</item>
        <item>"h20:0"</item>
        <item>"h20:1"</item>
        <item>"21:0"</item>
        <item>"h21:0"</item>
        <item>"22:0"</item>
        <item>"22:1"</item>
        <item>"h22:0"</item>
        <item>"h22:1"</item>
        <item>"23:0"</item>
        <item>"h23:0"</item>
        <item>"24:0"</item>
        <item>"24:1"</item>
        <item>"h24:0"</item>
        <item>"25:0"</item>
        <item>"26:0"</item>
        <item>"26:1"</item>
        <item>"h26:0"</item>
        <item>"h26:1"</item>
        <item>"27:0"</item>
        <item>"h27:0"</item>
        <item>"28:0"</item>
        <item>"h28:0"</item>
        <item>"29:0"</item>
        <item>"h29:0"</item>
        <item>"30:0"</item>
        <item>"h30:0"</item>
        <item>"31:0"</item>
        <item>"h31:0"</item>
        <item>"32:0"</item>
        <item>"h32:0"</item>
    </string-array>

    <string-array name="gly_headgroup_array_values">
        <item>"PC"</item>
        <item>"PA"</item>
        <item>"PS"</item>
        <item>"PE"</item>
        <item>"PG"</item>
        <item>"PGP"</item>
        <item>"PI"</item>
        <item>"PIP"</item>
        <item>"PIP2"</item>
        <item>"PIP3"</item>
    </string-array>
</resources>
