<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.onerom.lipidlator.CholesterolEsters_Result_Activity">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="41dp"
        android:background="@android:color/black"
        android:text="@string/btnGo_back"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFormula"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toLeftOf="@+id/button5"
        android:layout_marginRight="8dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        android:text="@string/Home"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tvFormula"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="86dp"
        android:text="Formula:"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMZ"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/tvIon"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:text="@string/ion_chE"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Spinner
        android:id="@+id/spnIonArray"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="7dp"
        android:entries="@array/ion_array"
        app:layout_constraintLeft_toRightOf="@+id/tvIon"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded"
        app:layout_constraintHorizontal_bias="0.597"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvAcylChain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/acyl_chain_chE"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvIon" />

    <Spinner
        android:id="@+id/spnRatioArray"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:entries="@array/ratios_array"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/spnIonArray"
        app:layout_constraintLeft_toRightOf="@+id/tvAcylChain"
        android:layout_marginLeft="8dp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvMZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/m_z_ratio_chE"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/spnRatioArray"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvAbbreviation"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="19dp"
        android:text="@string/abbreviation"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMZ"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cholesteryl_esters"
        android:textSize="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
